fix: Update CSS to align sliders
The modifed label due to inches and feet change causes some design
problems. Fixing.

--- a/packages/client-run/src/Styles/AppGlobal.css
+++ b/packages/client-run/src/Styles/AppGlobal.css
@@ -112,6 +112,11 @@ body {
     font-size: 40px;
   }
 
+  .signup-form .height-input-slider label {
+    line-height: 60px;
+    font-size: 30px;
+  }
+
   .displayTimer {
     height: 500px;
     justify-content: center;
